--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   
-<div class="container-fluid p-5 my-3 border bg-dark text-white">
+<div class="container mx-3 my-2 py-2 px-2">
   <h1>My First Bootstrap Page</h1>
   <p>This part is inside a .container class.</p>
   <p>The .container class provides a responsive fixed width container.</p>
